# nixinstall

./: .editorconfig  .gitignore  Justfile  README.md  TODO.md  flake.nix  pyproject.toml
.github/workflows/: lint-format.yaml  python-build.yml
nixinstall/: __init__.py  __main__.py
nixinstall/applications/: audio.py  bluetooth.py
nixinstall/default_profiles/: custom.py  desktop.py  minimal.py  profile.py  server.py  tailored.py  xorg.py
nixinstall/default_profiles/desktops/: awesome.py  bspwm.py  budgie.py  cinnamon.py  cosmic.py  cutefish.py  deepin.py  enlightenment.py  gnome.py  hyprland.py  i3.py  labwc.py  lxqt.py  mate.py  niri.py  plasma.py  qtile.py  river.py  sway.py  xfce4.py  xmonad.py
nixinstall/default_profiles/servers/: cockpit.py  docker.py  httpd.py  lighttpd.py  mariadb.py  nginx.py  postgresql.py  sshd.py  tomcat.py
nixinstall/lib/: args.py  boot.py  configuration.py  global_menu.py  hardware.py  installer.py  luks.py  mirrors.py  networking.py  output.py  plugins.py  storage.py
nixinstall/lib/applications/: application_handler.py  application_menu.py
nixinstall/lib/authentication/: authentication_handler.py  authentication_menu.py
nixinstall/lib/disk/: device_handler.py  disk_menu.py  encryption_menu.py  fido.py  filesystem.py  partitioning_menu.py  subvolume_menu.py  utils.py
nixinstall/lib/interactions/: __init__.py  disk_conf.py  general_conf.py  manage_users_conf.py  network_menu.py  system_conf.py
nixinstall/lib/locale/: locale_menu.py  utils.py
nixinstall/lib/menu/: abstract_menu.py  list_manager.py  menu_helper.py
nixinstall/lib/models/: __init__.py  application.py  authentication.py  device_model.py  locale.py  network_configuration.py  packages.py  profile_model.py  users.py
nixinstall/lib/nix/: __init__.py  config.py  test_config.py
nixinstall/lib/pacman/: __init__.py
nixinstall/lib/profile/: profile_menu.py  profiles_handler.py
nixinstall/lib/utils/: util.py
nixinstall/scripts/: guided.py  minimal.py  only_hd.py  unattended.py
nixinstall/tui/: curses_menu.py  help.py  menu_item.py
tests/: test_args.py  test_configuration_output.py
tests/lib/nix/: test_config.py
